--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="./css/index.css">
       <script src="./js/index.js"></script>
       <script src="./js/allfunction.js"></script>
-      <script src="../js/animate.js"></script>
+      <script src="./js/animate1.js"></script>
 
 
 </head>
